# authforge

./: .clang-format-ignore  .gitattributes  .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  Dockerfile  PULL_REQUEST_TEMPLATE.md  README.md  README.zh-CN.md  SCRIPT_ANALYSIS.md  build_output.txt  conanfile.txt  docker-compose.debug.yml  docker-compose.prod.yml  docker-compose.yml  docker-quick-verify-debug.sh  manage.ps1  manage.sh  test_output.txt
OAuth2Backend/: .gitignore  CMakeLists.txt  Dockerfile  P0_FUNCTIONALITY_VERIFICATION_REPORT.md  config.ci.json  config.dev.json  config.json  config.prod.json  docker-compose.yml  main.cc  model.json  openapi.yaml
OAuth2Backend/common/config/: ConfigManager.cc  ConfigManager.h
OAuth2Backend/common/documentation/: OpenApiGenerator.cc  OpenApiGenerator.h
OAuth2Backend/common/error/: ErrorHandler.cc  ErrorHandler.h  OAuth2ErrorHandler.cc  OAuth2ErrorHandler.h
OAuth2Backend/common/types/: OAuth2Types.h
OAuth2Backend/common/utils/: SubjectGenerator.h
OAuth2Backend/common/validation/: ValidationHelper.cc  ValidationHelper.h  ValidationRules.h  Validator.cc  Validator.h  ValidatorHelper.cc  ValidatorHelper.h
OAuth2Backend/controllers/: AdminController.cc  ApiDocController.h  GoogleController.cc  OAuth2Controller.cc  OAuth2Controller.h  WeChatController.cc  WeChatController.h
OAuth2Backend/docs/: DOCKER_TESTING.md  TEST_OPTIMIZATION_PLAN.md  api-documentation-automation-tools.md  architecture_overview.md  ci_cd_guide.md  database_encoding_guide.md
OAuth2Backend/docs/api/: index.html
OAuth2Backend/filters/: AuthorizationFilter.cc  AuthorizationFilter.h  OAuth2Middleware.cc  OAuth2Middleware.h  ValidationFilter.cc  ValidationFilter.h
OAuth2Backend/models/: Oauth2AccessTokens.cc  Oauth2AccessTokens.h  Oauth2Clients.cc  Oauth2Clients.h  Oauth2Codes.cc  Oauth2Codes.h  Oauth2RefreshTokens.cc  Oauth2RefreshTokens.h  Permissions.cc  Permissions.h  RolePermissions.cc  RolePermissions.h  Roles.cc  Roles.h  UserRoles.cc  UserRoles.h  Users.cc  Users.h  model.json
OAuth2Backend/plugins/: OAuth2Metrics.cc  OAuth2Metrics.h  OAuth2Plugin.cc  OAuth2Plugin.h
OAuth2Backend/scripts/: build.bat  check_db_encoding.bat  clean_emoji.py  diagnose_users.bat  docker_postgres_start.bat  full_test.bat  full_test_docker.bat  generate_models.bat  install-hooks.sh  rebuild-debug-image.sh  run_server.bat  scan_emoji.py  setup_database.bat  test-oauth2-endpoints.bat  test-oauth2-endpoints.ps1  test.bat  validate-openapi.sh
OAuth2Backend/services/: AuthService.cc  AuthService.h  OAuth2CleanupService.cc  OAuth2CleanupService.h
OAuth2Backend/sql/: 001_oauth2_core.sql  005_p1_token_enhancements.sql
OAuth2Backend/storage/: CachedOAuth2Storage.cc  CachedOAuth2Storage.h  IOAuth2Storage.h  MemoryOAuth2Storage.cc  MemoryOAuth2Storage.h  PostgresOAuth2Storage.cc  PostgresOAuth2Storage.h  RedisOAuth2Storage.cc  RedisOAuth2Storage.h
OAuth2Backend/test/: AdvancedStorageTest.cc  CMakeLists.txt  ConfigMigrationTest.cc  ConfigTest.cc  DbLeakVerificationTest.cc  EnvConfigTest.cc  FunctionalTest.cc  IntegrationE2ETest.cc  MemoryStorageTest.cc  OAuth2FlowE2ETest.cc  P0FunctionalityTest.cc  P1FeatureTest.cc  PerformanceBenchmark.cc  PluginTest.cc  PostgresStorageTest.cc  RateLimiterTest.cc  RedirectUriValidationTest.cc  RedisStorageTest.cc  SchemaSetup.cc  SecurityTest.cc  SecurityValidationTest.cc  SubjectMappingTest.cc  UserTest.cc  test_main.cc
OAuth2Backend/test/common/: ConfigManagerTest.cc  ErrorHandlerTest.cc  OpenApiGeneratorParameterTypesTest.cc  OpenApiGeneratorTest.cc  ValidationHelperTest.cc  ValidatorTest.cc
OAuth2Backend/test/legacy_broken/: DbLeakVerificationTest.cc  FunctionalTest.cc  P0FunctionalityTest.cc  PerformanceBenchmark.cc  SecurityTest.cc  SubjectMappingTest.cc
OAuth2Backend/test/scripts/: move_tests.py  naming_validator.sh
OAuth2Backend/test/services/: AuthServiceGetUserInfoTest.cc
OAuth2Backend/views/: consent.csp  login.csp
OAuth2Plugin/: CMakeLists.txt
OAuth2Plugin/include/oauth2/: AuditLogger.h  ClientService.h  ConfigManager.h  ConfigTypes.h  CryptoUtils.h  EmailService.h  ErrorHandler.h  ErrorTypes.h  IOAuth2Storage.h  IdentityService.h  JwkManager.h  OAuth2CleanupService.h  OAuth2ErrorHandler.h  OAuth2Metrics.h  OAuth2Plugin.h  OAuth2Types.h  Oauth2AccessTokens.h  Oauth2ClientScopes.h  Oauth2Clients.h  Oauth2Codes.h  Oauth2RefreshTokens.h  Oauth2Scopes.h  Oauth2SubjectMappings.h  Oauth2UserConsents.h  OpenApiGenerator.h  PasswordHasher.h  Permissions.h  RolePermissions.h  Roles.h  SubjectGenerator.h  TokenService.h  TotpUtils.h  UserRoles.h  Users.h  ValidationHelper.h  ValidationRules.h  Validator.h  ValidatorHelper.h  orm_compat.h
OAuth2Plugin/src/: OAuth2CleanupService.cc  OAuth2Plugin.cc
OAuth2Plugin/src/error/: RequestId.cc  (+5 more)
OAuth2Server/: .dockerignore  .env.example  .gitignore  AuthService.cc  AuthService.h  CMakeLists.txt  SchemaManager.cc  SchemaManager.h  config.ci.json  config.dev.json  config.json  config.prod.json  docker-compose.yml  main.cc  model.json  openapi.yaml
OAuth2Server/controllers/: AdminApiController.cc  AdminApiController.h  AdminController.cc  AdminController.h  ApiDocController.cc  ClientRegistrationController.cc  ClientRegistrationController.h  DeviceAuthController.cc  DeviceAuthController.h  EmailVerificationController.cc  EmailVerificationController.h  GitHubController.cc  GitHubController.h  GoogleController.cc  GoogleController.h  HealthController.cc  HealthController.h  MfaController.cc  MfaController.h  OAuth2Controller.cc  OAuth2Controller.h  OrganizationController.cc  OrganizationController.h  PasswordResetController.cc  PasswordResetController.h  SessionController.cc  SessionController.h  UserSelfServiceController.cc  UserSelfServiceController.h  WeChatController.cc  WebAuthnController.cc  WebAuthnController.h
OAuth2Server/filters/: AuthorizationFilter.cc  ValidationFilter.cc
OAuth2Server/sql/: 002_users_table.sql  003_rbac_schema.sql  004_oauth2_scopes.sql
OAuth2Server/test/: CMakeLists.txt  SchemaSetup.cc  test_main.cc
OAuth2Server/views/: login.csp
(+574 files in other folders)
